--- a/package.json
+++ b/package.json
@@ -1,23 +1,22 @@
-{   "scripts": {
-   "postinstall": "npm install --legacy-peer-deps"
-    },
-   "engines":{
-       "node":"22.15.0"
-   },
+{
   "name": "major_project",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
+    "heroku-postbuild": "npm install --legacy-peer-deps",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "engines": {
+    "node": "22.15.0"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
     "@mapbox/mapbox-sdk": "^0.16.1",
-    "cloudinary": "^2.7.0",
+    "cloudinary": "1.37.2",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^5.1.0",
     "dotenv": "^17.2.1",
